[package]
name = "rust-drawing"
version = "0.1.0"
authors = ["kmkzt <info.pscreator@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
draw = "0.3.0"
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"

[dependencies.web-sys]
version = "0.3.37"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
]
